new images and shiz

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<!-- Elegant Icons -->
 	<link rel="stylesheet" type="text/css" href="fonts/eleganticons/et-icons.css">
 	<!-- Main style -->
-	<link rel="stylesheet" type="text/css" href="css/cardio.css">
+	<link rel="stylesheet" type="text/css" href="css/CCVC.css">
 </head>
 
 <body>
@@ -88,120 +88,52 @@
 		</div>
 	</header>
 
+
 	<section>
 		<div class="cut cut-top"></div>
 		<div class="container">
 			<div class="row intro-tables">
 				<div class="col-md-4">
 					<div class="intro-table intro-table-first">
-						<h5 class="white heading">Today's Schedule</h5>
+						<h3 class="white heading"> Youtube  </h3>
 						<div class="owl-carousel owl-schedule bottom">
-							<div class="item">
-								<div class="schedule-row row">
-									<div class="col-xs-6">
-										<h5 class="regular white">Early Exercise</h5>
-									</div>
-									<div class="col-xs-6 text-right">
-										<h5 class="white">8:30 - 10:00</h5>
-									</div>
-								</div>
-								<div class="schedule-row row">
-									<div class="col-xs-6">
-										<h5 class="regular white">Muscle Building</h5>
-									</div>
-									<div class="col-xs-6 text-right">
-										<h5 class="white">8:30 - 10:00</h5>
-									</div>
-								</div>
-								<div class="schedule-row row">
-									<div class="col-xs-6">
-										<h5 class="regular white">Cardio</h5>
-									</div>
-									<div class="col-xs-6 text-right">
-										<h5 class="white">8:30 - 10:00</h5>
-									</div>
+							<div class="item" style="align-content: center;">
+								<div>
+									<iframe 
+										src="https://www.youtube.com/subscribe_embed?usegapi=1&channelid=UC_9-2n8WvOQZcPUquQPU_zA&layout=full&count=default" 
+										style="margin-left: 130px; margin-top: 200px; width: 250px; height: 120px; scale: 1.8;"
+										frameborder="0">
+									</iframe>
 								</div>
 							</div>
 							<div class="item">
-								<div class="schedule-row row">
-									<div class="col-xs-6">
-										<h5 class="regular white">Early Exercise</h5>
-									</div>
-									<div class="col-xs-6 text-right">
-										<h5 class="white">8:30 - 10:00</h5>
-									</div>
-								</div>
-								<div class="schedule-row row">
-									<div class="col-xs-6">
-										<h5 class="regular white">Muscle Building</h5>
-									</div>
-									<div class="col-xs-6 text-right">
-										<h5 class="white">8:30 - 10:00</h5>
-									</div>
-								</div>
-								<div class="schedule-row row">
-									<div class="col-xs-6">
-										<h5 class="regular white">Cardio</h5>
-									</div>
-									<div class="col-xs-6 text-right">
-										<h5 class="white">8:30 - 10:00</h5>
-									</div>
-								</div>
+
 							</div>
 							<div class="item">
-								<div class="schedule-row row">
-									<div class="col-xs-6">
-										<h5 class="regular white">Early Exercise</h5>
-									</div>
-									<div class="col-xs-6 text-right">
-										<h5 class="white">8:30 - 10:00</h5>
-									</div>
-								</div>
-								<div class="schedule-row row">
-									<div class="col-xs-6">
-										<h5 class="regular white">Muscle Building</h5>
-									</div>
-									<div class="col-xs-6 text-right">
-										<h5 class="white">8:30 - 10:00</h5>
-									</div>
-								</div>
-								<div class="schedule-row row">
-									<div class="col-xs-6">
-										<h5 class="regular white">Cardio</h5>
-									</div>
-									<div class="col-xs-6 text-right">
-										<h5 class="white">8:30 - 10:00</h5>
-									</div>
-								</div>
+
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="intro-table intro-table-hover">
-						<h5 class="white heading hide-hover">Premium Membership</h5>
+						<h3 class="white heading hide-hover">Instagram</h3>
 						<div class="bottom">
-							<h4 class="white heading small-heading no-margin regular">Register Today</h4>
-							<h4 class="white heading small-pt">20% Discount</h4>
-							<a href="#" class="btn btn-white-fill expand">Register</a>
+							<h4 class="white heading small-heading no-margin regular">Stay up to date with posts</h4>
+							<h4 class="white heading small-pt">DM for help</h4>
+							<a href="#" class="btn btn-white-fill expand">Check it out</a>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="intro-table intro-table-third">
-						<h5 class="white heading">Happy Clients</h5>
+						<h5 class="white heading">Facebook Pages</h5>
 						<div class="owl-testimonials bottom">
 							<div class="item">
-								<h4 class="white heading content">I couldn't be more happy with the results!</h4>
-								<h5 class="white heading light author">Adam Jordan</h5>
+								<div class="fb-page" style="margin-bottom: 100px;  margin-top: 0px; margin-left: 15px" data-href="https://www.facebook.com/ccvc.nsw" data-tabs="" data-width="330" data-height="" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-transparent="true"><blockquote cite="https://www.facebook.com/ccvc.nsw" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ccvc.nsw">Central Coast Volleyball Club</a></blockquote></div>
 							</div>
 							<div class="item">
-								<h4 class="white heading content">I can't believe how much better I feel!</h4>
-								<h5 class="white heading light author">Greg Pardon</h5>
-							</div>
-							<div class="item">
-								<h4 class="white heading content">Incredible transformation and I feel so healthy!</h4>
-								<h5 class="white heading light author">Christina Goldman</h5>
+								
 							</div>
 						</div>
 					</div>
@@ -487,6 +419,8 @@
 	<script src="js/typewriter.js"></script>
 	<script src="js/jquery.onepagenav.js"></script>
 	<script src="js/main.js"></script>
+	<script src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v24.0&appId=APP_ID"></script>
+	<script src="https://apis.google.com/js/platform.js"></script>
 	<script>
         $(document).ready(function() {
             // Navbar scroll effect
