--- a/index.html
+++ b/index.html
@@ -43,36 +43,22 @@
 	<!-- Navbar -->
 	<nav class="navbar">
 		<div class="container">
+			<a class="navbar-brand" href="#">
+				<img src="img/CCVC LOGO.png" alt="CCVC Logo">
+			</a>
 
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-					data-target="#bs-example-navbar-collapse-1">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-
-				<a class="navbar-brand" href="#">
-					<img src="img/CCVC LOGO.png" alt="CCVC Logo">
-				</a>
-			</div>
-
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav navbar-right main-nav">
-					<li><a href="#play">Play</a></li>
-					<li><a href="#contacts">Contact Us</a></li>
-					<li><a href="#team">T's & C's</a></li>
-					<li><a href="#pricing">Pricing</a></li>
-					<li><a href="merch.html">Merch</a></li>
-					<li><a href="#" class="btn btn-blue">FAQ</a></li>
-				</ul>
-			</div>
-
+			<ul class="nav navbar-nav navbar-right main-nav">
+				<li><a href="#play">Play</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
+				<li><a href="#team">T's & C's</a></li>
+				<li><a href="#pricing">Pricing</a></li>
+				<li><a href="merch.html">Merch</a></li>
+				<li><a href="#" class="btn btn-blue">FAQ</a></li>
+			</ul>
 		</div>
 	</nav>
 
-	<header id="intro">
+	<header id="start">
 		<div class="container">
 			<div class="table">
 				<div class="header-text">
@@ -141,9 +127,22 @@
 			</div>
 		</div>
 	</section>
+
+	<section id="intro">
+		<div style="margin: 100px;">
+		 <h2 style="justify-content: center;">Who are we</h2>
+		 <h5>Central Coast Volleyball Club Inc (CCVC) is located between Sydney and Newcastle in NSW.
+We are a Volleyball NSW-affiliated & not-for-profit club and cater to all levels of ability, from new starters through to experienced and the more competitive players.
+
+​If you are looking to play at a competitive level, or simply want a more social and fun way to keep fit, please come and see us.
+
+CCVC aims to provide opportunities for all people to enjoy sport, make new friends, learn new skills, acquire habits of self-discipline, learn to cooperate and to compete fairly. </h5>
+		</div>
+	</section>
+
 	<section id="play">
         <div class="container">
-            <h2>Weekly Timetable</h2>
+            <h2>Timetable</h2>
             
             <div class="timetable-header">
                 <button class="week-nav prev-week" id="prevWeek"></button>
@@ -210,64 +209,7 @@
 		</div>
 		<div class="cut cut-bottom"></div>
 	</section>
-	<section id="team" class="section gray-bg">
-		<div class="container">
-			<div class="row title text-center">
-				<h2 class="margin-top">Team</h2>
-				<h4 class="light muted">We're a dream team!</h4>
-			</div>
-			<div class="row">
-				<div class="col-md-4">
-					<div class="team text-center">
-						<div class="cover" style="background:url('img/team/team-cover1.jpg'); background-size:cover;">
-							<div class="overlay text-center">
-								<h3 class="white">$69.00</h3>
-								<h5 class="light light-white">1 - 5 sessions / month</h5>
-							</div>
-						</div>
-						<img src="img/team/team3.jpg" alt="Team Image" class="avatar">
-						<div class="title">
-							<h4>Ben Adamson</h4>
-							<h5 class="muted regular">Fitness Instructor</h5>
-						</div>
-						<button data-toggle="modal" data-target="#modal1" class="btn btn-blue-fill">Sign Up Now</button>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="team text-center">
-						<div class="cover" style="background:url('img/team/team-cover2.jpg'); background-size:cover;">
-							<div class="overlay text-center">
-								<h3 class="white">$69.00</h3>
-								<h5 class="light light-white">1 - 5 sessions / month</h5>
-							</div>
-						</div>
-						<img src="img/team/team1.jpg" alt="Team Image" class="avatar">
-						<div class="title">
-							<h4>Eva Williams</h4>
-							<h5 class="muted regular">Personal Trainer</h5>
-						</div>
-						<a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue-fill ripple">Sign Up Now</a>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="team text-center">
-						<div class="cover" style="background:url('img/team/team-cover3.jpg'); background-size:cover;">
-							<div class="overlay text-center">
-								<h3 class="white">$69.00</h3>
-								<h5 class="light light-white">1 - 5 sessions / month</h5>
-							</div>
-						</div>
-						<img src="img/team/team2.jpg" alt="Team Image" class="avatar">
-						<div class="title">
-							<h4>John Phillips</h4>
-							<h5 class="muted regular">Personal Trainer</h5>
-						</div>
-						<a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue-fill ripple">Sign Up Now</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+	
 	<section id="pricing" class="section">
 		<div class="container">
 			<div class="row title text-center">
