--- a/merch.html
+++ b/merch.html
@@ -43,31 +43,18 @@
 	<!-- Navbar -->
 	<nav class="navbar">
 		<div class="container">
+            <a class="navbar-brand" href="index.html">
+                <img src="img/CCVC LOGO.png" alt="CCVC Logo">
+            </a>
 
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-					data-target="#bs-example-navbar-collapse-1">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-
-				<a class="navbar-brand" href="index.html">
-					<img src="img/CCVC LOGO.png" alt="CCVC Logo">
-				</a>
-			</div>
-
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav navbar-right main-nav">
-					<li><a href="#play">Play</a></li>
-					<li><a href="#contacts">Contact Us</a></li>
-					<li><a href="#team">T's & C's</a></li>
-					<li><a href="#pricing">Pricing</a></li>
-					<li><a href="merch.html">Merch</a></li>
-					<li><a href="#" class="btn btn-blue">FAQ</a></li>
-				</ul>
-			</div>
+            <ul class="nav navbar-nav">
+                <li><a href="#play">Play</a></li>
+                <li><a href="#contacts">Contact Us</a></li>
+                <li><a href="#team">T's & C's</a></li>
+                <li><a href="#pricing">Pricing</a></li>
+                <li class="active"><a href="merch.html">Merch</a></li>
+                <li><a href="#" class="btn btn-blue">FAQ</a></li>
+            </ul>
 
 		</div>
 	</nav> 
