--- a/index.html
+++ b/index.html
@@ -42,20 +42,27 @@
 
 	<!-- Navbar -->
 	<nav class="navbar">
-		<div class="container">
-			<a class="navbar-brand" href="#">
-				<img src="img/CCVC LOGO.png" alt="CCVC Logo">
-			</a>
 
-			<ul class="nav navbar-nav navbar-right main-nav">
-				<li><a href="#play">Play</a></li>
-				<li><a href="contact.html">Contact Us</a></li>
-				<li><a href="#team">T's & C's</a></li>
-				<li><a href="#pricing">Pricing</a></li>
-				<li><a href="merch.html">Merch</a></li>
-				<li><a href="#" class="btn btn-blue">FAQ</a></li>
-			</ul>
+		<button class="mobile-menu-toggle" aria-label="Toggle navigation">
+			<span></span>
+			<span></span>
+			<span></span>
+		</button>
+
+		<div class="container">
+            <a class="navbar-brand" href="index.html">
+                <img src="img/CCVC LOGO.png" alt="CCVC Logo">
+            </a>
+			<ul class="nav navbar-nav">
+            <li><a href="#play">Play</a></li>
+            <li><a href="#contacts">Contact Us</a></li>
+            <li><a href="#team">T's & C's</a></li>
+            <li><a href="#pricing">Pricing</a></li>
+            <li><a href="merch.html">Merch</a></li>
+            <li><a href="#" class="btn btn-blue">FAQ</a></li>
+        </ul>
 		</div>
+		
 	</nav>
 
 	<header id="start">
@@ -76,21 +83,19 @@
 
 
 	<section id="contacts">
-		<div class="cut cut-top"></div>
+		
 		<div class="container">
 			<div class="row intro-tables">
 				<div class="col-md-4">
 					<div class="intro-table intro-table-first">
 						<h3 class="white heading"> Youtube  </h3>
 						<div class="owl-carousel owl-schedule bottom">
-							<div class="item" style="align-content: center;">
-								<div>
-									<iframe 
-										src="https://www.youtube.com/subscribe_embed?usegapi=1&channelid=UC_9-2n8WvOQZcPUquQPU_zA&layout=full&count=default" 
-										style="margin-left: 130px; margin-top: 200px; width: 250px; height: 120px; scale: 1.8;"
-										frameborder="0">
-									</iframe>
-								</div>
+							<div class="item" style="justify-content: center;">
+								<iframe 
+									src="https://www.youtube.com/subscribe_embed?usegapi=1&channelid=UC_9-2n8WvOQZcPUquQPU_zA&layout=full&count=default"
+									style="padding-left:  30%; padding-top: 20%; scale: 1.8; "
+									frameborder="0">
+								</iframe>
 							</div>
 							<div class="item">
 
@@ -115,11 +120,11 @@
 					<div class="intro-table intro-table-third">
 						<h3 class="white heading">Facebook</h3>
 						<div class="owl-facebook bottom">
-							<div class="item">
-								<div class="iframely-embed"><div class="iframely-responsive" style="margin-bottom: 80px; margin-left: 15px; width: 330px; height: 120px; padding-bottom: 0;"><a href="https://www.facebook.com/ccvc.nsw/" data-iframely-url="https://iframely.net/h1jK4s0B?card=small&theme=light"></a></div></div>
+							<div class="item" style="padding-bottom: 10%;">
+								<div class="iframely-embed"><div class="iframely-responsive" style=" margin: auto; width: 80%; height: 30%;"><a href="https://www.facebook.com/ccvc.nsw/" data-iframely-url="https://iframely.net/h1jK4s0B?card=small&theme=light"></a></div></div>
 							</div>
-							<div class="item">
-								<div class="iframely-embed"><div class="iframely-responsive" style="height: 120px; margin-left: 15px; width: 330px; padding-bottom: 0;"><a href="https://www.facebook.com/groups/2244258945796217/" data-iframely-url="https://iframely.net/bFZPAUra?card=small&theme=light"></a></div></div>
+							<div class="item" style="padding-bottom: 10%;">
+								<div class="iframely-embed"><div class="iframely-responsive" style="margin: auto; width: 80%; height: 30%;"><a href="https://www.facebook.com/groups/2244258945796217/" data-iframely-url="https://iframely.net/bFZPAUra?card=small&theme=light"></a></div></div>
 							</div>
 						</div>
 					</div>
