--- a/merch.html
+++ b/merch.html
@@ -42,22 +42,28 @@
 
 	<!-- Navbar -->
 	<nav class="navbar">
+
+		<button class="mobile-menu-toggle" aria-label="Toggle navigation">
+			<span></span>
+			<span></span>
+			<span></span>
+		</button>
+
 		<div class="container">
             <a class="navbar-brand" href="index.html">
                 <img src="img/CCVC LOGO.png" alt="CCVC Logo">
             </a>
-
-            <ul class="nav navbar-nav">
-                <li><a href="#play">Play</a></li>
-                <li><a href="#contacts">Contact Us</a></li>
-                <li><a href="#team">T's & C's</a></li>
-                <li><a href="#pricing">Pricing</a></li>
-                <li class="active"><a href="merch.html">Merch</a></li>
-                <li><a href="#" class="btn btn-blue">FAQ</a></li>
-            </ul>
-
+			<ul class="nav navbar-nav">
+            <li><a href="#play">Play</a></li>
+            <li><a href="#contacts">Contact Us</a></li>
+            <li><a href="#team">T's & C's</a></li>
+            <li><a href="#pricing">Pricing</a></li>
+            <li class="active"><a href="merch.html">Merch</a></li>
+            <li><a href="#" class="btn btn-blue">FAQ</a></li>
+        </ul>
 		</div>
-	</nav> 
+		
+	</nav>
     <section class="product-section" id="product-sections">  
         <div class="product-grid">
             <div class="product-card" onclick="openProductDetail(this)" 
