merch page didnt have js file

--- a/merch.html
+++ b/merch.html
@@ -224,7 +224,7 @@
 	<script src="js/wow.min.js"></script>
 	<script src="js/typewriter.js"></script>
 	<script src="js/jquery.onepagenav.js"></script>
-	<script src="js/merch.js"></script>
+	<script src="js/main.js"></script>
 	<script src="https://apis.google.com/js/platform.js"></script>
 	<script src="https://iframely.net/embed.js"></script>
 </body>
