--- a/merch.html
+++ b/merch.html
@@ -34,7 +34,7 @@
 	<link rel="stylesheet" type="text/css" href="css/CCVC.css">
 </head>
 
-<body class="merch-page">
+<body class="other">
 <!-- Preloader -->
 	<div class="preloader">
 		<img src="img/loader.gif" alt="Preloader image">
