--- a/merch.html
+++ b/merch.html
@@ -192,7 +192,7 @@
     <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content modal-popup">
-                <a href="#" class="close-link"><i class="icon_close_alt2"></i></a>
+                <a style="z-index: 1;" href="#" class="close-link"><i class="icon_close_alt2"></i></a>
                 <h3 class="white">Details</h3>
                 <h5 class="white">Orders for club merch are done in bulk once enough people have requested merchandise.
                     We will contact you with updates and sort payment once ordered.
