--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </a>
 			<ul class="nav navbar-nav">
 				<li><a href="#play">Play</a></li>
-				<li><a href="#contacts">Contact Us</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
 				<li><a href="#team">T's & C's</a></li>
 				<li><a href="#pricing">Pricing</a></li>
 				<li><a href="merch.html">Merch</a></li>
