--- a/merch.html
+++ b/merch.html
@@ -194,7 +194,7 @@
             <div class="modal-content modal-popup">
                 <a style="z-index: 1;" href="#" class="close-link"><i class="icon_close_alt2"></i></a>
                 <h3 class="white">Details</h3>
-                <h5 class="white">Orders for club merch are done in bulk once enough people have requested merchandise.
+                <h5 class="white">Orders for club merch are done in bulk once enough people have requested them.
                     We will contact you with updates and sort payment once ordered.
                 </h5>
                 <form action="" class="popup-form">
