play section upgrades

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <img src="img/CCVC LOGO.png" alt="CCVC Logo">
             </a>
 			<ul class="nav navbar-nav">
-				<li><a href="#play">Play</a></li>
+				<li><a href="play.html">Play</a></li>
 				<li><a href="contact.html">Contact Us</a></li>
 				<li><a href="#team">T's & C's</a></li>
 				<li><a href="#pricing">Pricing</a></li>
@@ -146,7 +146,7 @@ CCVC aims to provide opportunities for all people to enjoy sport, make new frien
 	</section>
 
 	<section id="play">
-        <div class="container">
+        <div class="container" style="width: 70%";>
             <h2>Timetable</h2>
             
             <div class="timetable-header">
@@ -160,13 +160,13 @@ CCVC aims to provide opportunities for all people to enjoy sport, make new frien
                     <thead>
                         <tr>
                             <th class="time-column">Time</th>
-                            <th>Monday</th>
-                            <th>Tuesday</th>
-                            <th>Wednesday</th>
-                            <th>Thursday</th>
-                            <th>Friday</th>
-                            <th>Saturday</th>
-                            <th>Sunday</th>
+                            <th>Mon</th>
+                            <th>Tue</th>
+                            <th>Wed</th>
+                            <th>Thu</th>
+                            <th>Fri</th>
+                            <th>Sat</th>
+                            <th>Sun</th>
                         </tr>
                     </thead>
                     <tbody id="timetableBody">
@@ -366,6 +366,7 @@ CCVC aims to provide opportunities for all people to enjoy sport, make new frien
 	<script src="js/typewriter.js"></script>
 	<script src="js/jquery.onepagenav.js"></script>
 	<script src="js/main.js"></script>
+	<script src="js/timetable.js"></script>
 	<script src="https://apis.google.com/js/platform.js"></script>
 	<script src="https://iframely.net/embed.js"></script>
 </body>
