--- a/merch.html
+++ b/merch.html
@@ -54,8 +54,8 @@
                 <img src="img/CCVC LOGO.png" alt="CCVC Logo">
             </a>
 			<ul class="nav navbar-nav">
-            <li><a href="#play">Play</a></li>
-            <li><a href="#contacts">Contact Us</a></li>
+            <li><a href="play.html">Play</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
             <li><a href="#team">T's & C's</a></li>
             <li><a href="#pricing">Pricing</a></li>
             <li class="active"><a href="merch.html">Merch</a></li>
