register page added

--- a/contact.html
+++ b/contact.html
@@ -56,9 +56,8 @@
             </a>
 			<ul class="nav navbar-nav">
             <li><a href="play.html">Play</a></li>
-            <li  class="active"><a href="contact.html">Contact Us</a></li>
-            <li><a href="#team">T's & C's</a></li>
-            <li><a href="#pricing">Pricing</a></li>
+            <li class="active"><a href="contact.html">Contact Us</a></li>
+            <li><a href="register.html">Register</a></li>
             <li><a href="merch.html">Merch</a></li>
             <li><a href="#" class="btn btn-blue">FAQ</a></li>
         </ul>
