--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@
             </a>
 			<ul class="nav navbar-nav">
 				<li><a href="play.html">Play</a></li>
-				<li><a href="contact.html">Contact Us</a></li>
-				<li><a href="#team">T's & C's</a></li>
-				<li><a href="#pricing">Pricing</a></li>
+				<li><a href="contact.html">Contact-Us</a></li>
+				<li><a href="register.html">Register</a></li>
 				<li><a href="merch.html">Merch</a></li>
 				<li><a href="#" class="btn btn-blue">FAQ</a></li>
 			</ul>
@@ -135,7 +134,7 @@
 
 	<section id="intro">
 		<div style="margin: 100px;">
-		 <h2 style="justify-content: center;">Who are we</h2>
+		 <h2 style="justify-content: center;">Who we are</h2>
 		 <h5>Central Coast Volleyball Club Inc (CCVC) is located between Sydney and Newcastle in NSW.
 We are a Volleyball NSW-affiliated & not-for-profit club and cater to all levels of ability, from new starters through to experienced and the more competitive players.
 
@@ -145,37 +144,26 @@ CCVC aims to provide opportunities for all people to enjoy sport, make new frien
 		</div>
 	</section>
 
-	<section id="play">
-        <div class="container" style="width: 70%";>
-            <h2>Timetable</h2>
-            
-            <div class="timetable-header">
-                <button class="week-nav prev-week" id="prevWeek"></button>
-                <h3 class="week-display" id="weekDisplay"></h3>
-                <button class="week-nav next-week" id="nextWeek"></button>
-            </div>
-            
-            <div class="timetable-wrapper">
-                <table class="timetable-grid">
-                    <thead>
-                        <tr>
-                            <th class="time-column">Time</th>
-                            <th>Mon</th>
-                            <th>Tue</th>
-                            <th>Wed</th>
-                            <th>Thu</th>
-                            <th>Fri</th>
-                            <th>Sat</th>
-                            <th>Sun</th>
-                        </tr>
-                    </thead>
-                    <tbody id="timetableBody">
-                        <!-- Timetable will be populated by JavaScript -->
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </section>
+	<section id="notices">
+		<div style="margin: 100px;">
+		 <h2 style="justify-content: center;">Notice Board</h2>
+		 <h5> </h5>
+		</div>
+	</section>
+
+	<section id="sponsors">
+		<div style="margin: 100px;">
+		 <h2 style="justify-content: center;">sponsors</h2>
+		 <h5> </h5>
+		</div>
+	</section>
+
+
+
+	<!--
+
+
+
 	<section id="services" class="section section-padded">
 		<div class="container">
 			<div class="row text-center title">
@@ -352,6 +340,82 @@ CCVC aims to provide opportunities for all people to enjoy sport, make new frien
 			</div>
 		</div>
 	</footer>
+	-->
+
+	<div id="footer-wrap">
+		<div class="wsite-elements wsite-footer">
+			<div>
+				<div class="wsite-multicol">
+					<div class="wsite-multicol-table-wrap" style="margin:0 -20px;">
+						<table class="wsite-multicol-table">
+							<tbody class="wsite-multicol-tbody">
+								<tr class="wsite-multicol-tr">
+									<td class="wsite-multicol-col" style="width:79.1%; padding:0 20px;">
+										<h2 class="wsite-content-title" style="text-align:left;"><font size="4">CENTRAL COAST VOLLEYBALL CLUB INC.</font></h2>
+									</td>				
+									<td class="wsite-multicol-col" style="width:20.9%; padding:0 20px;">
+										<div style="text-align:left;">
+											<div style="height:20px;overflow:hidden"></div>
+											<span class="wsite-social wsite-social-default">	
+												<a class="first-child wsite-social-item wsite-social-instagram" href="https://www.instagram.com/ccvc.nsw/" target="_blank" alt="Instagram" aria-label="Instagram">
+													<span class="wsite-social-item-inner"></span>
+												</a>
+												<a class="wsite-social-item wsite-social-facebook" href="https://www.facebook.com/ccvc.nsw" target="_blank" alt="Facebook" aria-label="Facebook">
+													<span class="wsite-social-item-inner"></span>
+												</a>
+												<a class="last-child wsite-social-item wsite-social-mail" href="mailto:secretaryccvc@gmail.com" target="_blank" alt="Mail" aria-label="Mail">
+													<span class="wsite-social-item-inner"></span>
+												</a>
+											</span>
+											<div style="height:0px;overflow:hidden"></div>
+										</div>
+									</td>	
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+
+			<div>
+				<div style="height: 20px; overflow: hidden; width: 100%;"></div>
+				<hr class="styled-hr" style="width:100%;">
+					<div style="height: 20px; overflow: hidden; width: 100%;"></div>
+			</div>
+			<div>
+				<div class="wsite-multicol">
+					<div class="wsite-multicol-table-wrap" style="margin:0 -15px;">
+						<table class="wsite-multicol-table">
+							<tbody class="wsite-multicol-tbody">
+								<tr class="wsite-multicol-tr">
+									<td class="wsite-multicol-col" style="width:33.2077692107%; padding:0 15px;">
+										<h2 class="wsite-content-title" style="text-align:left;"><font size="3">Niagara Park Stadium</font></h2>
+										<div class="paragraph">
+											<span style="color:rgb(31, 31, 31)"></span>
+											<span style="color:rgb(142, 142, 142)">18 Washington Ave, Niagara Park NSW 2250</span>
+										</div>
+									</td>
+									<td class="wsite-multicol-col" style="width:32.716543279061%; padding:0 15px;">
+										<h2 class="wsite-content-title">
+											<span style="color:rgb(31, 31, 31)"><font size="3">Guzman y Gomez Stadium</font></span>
+										</h2>
+										<div class="paragraph">
+											<span style="color:rgb(142, 142, 142)">324-334 Terrigal Dr, Terrigal NSW 2260</span>
+										</div>
+									</td>	
+									<td class="wsite-multicol-col" style="width:34.075687510239%; padding:0 15px;">
+										<h2 class="wsite-content-title" style="text-align:left;"><font size="3">Email</font></h2>
+										<div class="paragraph" style="text-align:left;">secretaryccvc@gmail.com</div>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<!-- Holder for mobile navigation -->
 	<div class="mobile-nav">
 		<ul>
