--- a/merch.html
+++ b/merch.html
@@ -56,8 +56,7 @@
 			<ul class="nav navbar-nav">
             <li><a href="play.html">Play</a></li>
             <li><a href="contact.html">Contact Us</a></li>
-            <li><a href="#team">T's & C's</a></li>
-            <li><a href="#pricing">Pricing</a></li>
+            <li><a href="register.html">Register</a></li>
             <li class="active"><a href="merch.html">Merch</a></li>
             <li><a href="#" class="btn btn-blue">FAQ</a></li>
         </ul>
