--- a/play.html
+++ b/play.html
@@ -57,8 +57,7 @@
 			<ul class="nav navbar-nav">
             <li class="active"><a href="play.html">Play</a></li>
             <li><a href="contact.html">Contact Us</a></li>
-            <li><a href="#team">T's & C's</a></li>
-            <li><a href="#pricing">Pricing</a></li>
+            <li><a href="register.html">Register</a></li>
             <li><a href="merch.html">Merch</a></li>
             <li><a href="#" class="btn btn-blue">FAQ</a></li>
         </ul>
@@ -66,7 +65,7 @@
 		
 	</nav>
 
-    <section id="timetable" style="margin-top: 110px;">
+    <section id="timetable" style="margin-top: 110px; width:100vw">
 		
         <div class="container" style="width: 70%";>
 
@@ -188,6 +187,8 @@
 
 	</section>
 
+	
+
     
 
 
@@ -197,7 +198,7 @@
 	<script src="js/wow.min.js"></script>
 	<script src="js/typewriter.js"></script>
 	<script src="js/jquery.onepagenav.js"></script>
-	<script src="js/play.js"></script>
+	<script src="js/merch.js"></script>
     <script src="js/timetable.js"></script>
 	<script src="https://apis.google.com/js/platform.js"></script>
 	<script src="https://iframely.net/embed.js"></script>
