--- a/index.html
+++ b/index.html
@@ -303,118 +303,41 @@ CCVC aims to provide opportunities for all people to enjoy sport, make new frien
 				</form>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<footer>
-		<div class="container">
+		<div class="container" s>
 			<div class="row">
-				<div class="col-sm-6 text-center-mobile">
-					<h3 class="white">Reserve a Free Trial Class!</h3>
+				<div class="col-sm-6 text-center-mobile" style="width: 30%;">
+					<h3 class="white">CCVC</h3>
+					<p>&copy;Central Coast Volleyball Club </p>
+
 					<h5 class="light regular light-white">Shape your body and improve your health.</h5>
-					<a href="#" class="btn btn-blue ripple trial-button">Start Free Trial</a>
+					<div class="row" style="width: 100%;">
+						<ul class="social-footer">
+							<li><a href=""><i class="fa fa-facebook"></i></a></li>
+							<li><a href=""><i class="fa fa-twitter"></i></a></li>
+							<li><a href=""><i class="fa fa-google-plus"></i></a></li>
+						</ul>
+					</div>
+						
 				</div>
-				<div class="col-sm-6 text-center-mobile">
-					<h3 class="white">Opening Hours <span class="open-blink"></span></h3>
+				<div class="col-sm-6 text-center-mobile" style="width: 70%;">
+					<h3 class="white" style="padding-bottom: 0px;"> Brought to you by:</h3>
 					<div class="row opening-hours">
-						<div class="col-sm-6 text-center-mobile">
-							<h5 class="light-white light">Mon - Fri</h5>
-							<h3 class="regular white">9:00 - 22:00</h3>
-						</div>
-						<div class="col-sm-6 text-center-mobile">
-							<h5 class="light-white light">Sat - Sun</h5>
-							<h3 class="regular white">10:00 - 18:00</h3>
+						<div class="text-center-mobile" >
+							<img src="img/VNSW.png" alt="Volleyball Australia" style="width: 20%; padding-left: 20px">
+							<img src="img/clothLogo.png" alt="Clothing brand" style="width: 15%; padding-left: 20px">
+							<img src="img/VNSW.png" alt="Volleyball Australia" style="width: 20%; padding-left: 20px">
+							<img src="img/clothLogo.png" alt="Clothing brand" style="width: 15%; padding-left: 20px">
 						</div>
 					</div>
-				</div>
-			</div>
-			<div class="row bottom-footer text-center-mobile">
-				<div class="col-sm-8">
-					<p>&copy; 2015 All Rights Reserved. Powered by <a href="http://www.phir.co/">PHIr</a> exclusively for <a href="http://tympanus.net/codrops/">Codrops</a></p>
-				</div>
-				<div class="col-sm-4 text-right text-center-mobile">
-					<ul class="social-footer">
-						<li><a href="http://www.facebook.com/pages/Codrops/159107397912"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="http://www.twitter.com/codrops"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="https://plus.google.com/101095823814290637419"><i class="fa fa-google-plus"></i></a></li>
-					</ul>
 				</div>
 			</div>
 		</div>
 	</footer>
-	-->
+	
 
-	<div id="footer-wrap">
-		<div class="wsite-elements wsite-footer">
-			<div>
-				<div class="wsite-multicol">
-					<div class="wsite-multicol-table-wrap" style="margin:0 -20px;">
-						<table class="wsite-multicol-table">
-							<tbody class="wsite-multicol-tbody">
-								<tr class="wsite-multicol-tr">
-									<td class="wsite-multicol-col" style="width:79.1%; padding:0 20px;">
-										<h2 class="wsite-content-title" style="text-align:left;"><font size="4">CENTRAL COAST VOLLEYBALL CLUB INC.</font></h2>
-									</td>				
-									<td class="wsite-multicol-col" style="width:20.9%; padding:0 20px;">
-										<div style="text-align:left;">
-											<div style="height:20px;overflow:hidden"></div>
-											<span class="wsite-social wsite-social-default">	
-												<a class="first-child wsite-social-item wsite-social-instagram" href="https://www.instagram.com/ccvc.nsw/" target="_blank" alt="Instagram" aria-label="Instagram">
-													<span class="wsite-social-item-inner"></span>
-												</a>
-												<a class="wsite-social-item wsite-social-facebook" href="https://www.facebook.com/ccvc.nsw" target="_blank" alt="Facebook" aria-label="Facebook">
-													<span class="wsite-social-item-inner"></span>
-												</a>
-												<a class="last-child wsite-social-item wsite-social-mail" href="mailto:secretaryccvc@gmail.com" target="_blank" alt="Mail" aria-label="Mail">
-													<span class="wsite-social-item-inner"></span>
-												</a>
-											</span>
-											<div style="height:0px;overflow:hidden"></div>
-										</div>
-									</td>	
-								</tr>
-							</tbody>
-						</table>
-					</div>
-				</div>
-			</div>
-
-			<div>
-				<div style="height: 20px; overflow: hidden; width: 100%;"></div>
-				<hr class="styled-hr" style="width:100%;">
-					<div style="height: 20px; overflow: hidden; width: 100%;"></div>
-			</div>
-			<div>
-				<div class="wsite-multicol">
-					<div class="wsite-multicol-table-wrap" style="margin:0 -15px;">
-						<table class="wsite-multicol-table">
-							<tbody class="wsite-multicol-tbody">
-								<tr class="wsite-multicol-tr">
-									<td class="wsite-multicol-col" style="width:33.2077692107%; padding:0 15px;">
-										<h2 class="wsite-content-title" style="text-align:left;"><font size="3">Niagara Park Stadium</font></h2>
-										<div class="paragraph">
-											<span style="color:rgb(31, 31, 31)"></span>
-											<span style="color:rgb(142, 142, 142)">18 Washington Ave, Niagara Park NSW 2250</span>
-										</div>
-									</td>
-									<td class="wsite-multicol-col" style="width:32.716543279061%; padding:0 15px;">
-										<h2 class="wsite-content-title">
-											<span style="color:rgb(31, 31, 31)"><font size="3">Guzman y Gomez Stadium</font></span>
-										</h2>
-										<div class="paragraph">
-											<span style="color:rgb(142, 142, 142)">324-334 Terrigal Dr, Terrigal NSW 2260</span>
-										</div>
-									</td>	
-									<td class="wsite-multicol-col" style="width:34.075687510239%; padding:0 15px;">
-										<h2 class="wsite-content-title" style="text-align:left;"><font size="3">Email</font></h2>
-										<div class="paragraph" style="text-align:left;">secretaryccvc@gmail.com</div>
-									</td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+	
 
 	<!-- Holder for mobile navigation -->
 	<div class="mobile-nav">
