--- a/play.html
+++ b/play.html
@@ -59,7 +59,7 @@
             <li><a href="contact.html">Contact Us</a></li>
             <li><a href="register.html">Register</a></li>
             <li><a href="merch.html">Merch</a></li>
-            <li><a href="#" class="btn btn-blue">FAQ</a></li>
+            <li><a href="faq.html" class="btn btn-blue">FAQ</a></li>
         </ul>
 		</div>
 		
@@ -74,7 +74,7 @@
 					<h1 style="color: white;"> 
 						You must be registered with our club to step onto the court.
 					</h1>
-					<a href="registration.html" class="registration-button">
+					<a href="register.html" class="registration-button">
 						Registration
 					</a>
 					<h5 style="color: white;"> 
@@ -122,7 +122,7 @@
 				Womens & Girls Representatives
 			</h2>
 		</div>
-		<div id="womens-info" class="session-info-section">
+		<div id="womens-info" class="play-info">
 			<h3> heres the info</h3>
 		</div>
     </section>
@@ -136,13 +136,13 @@
 				Mens & Boys Representatives
 			</h2>
 		</div>
-		<div id="mens-info" class="session-info-section">
+		<div id="mens-info" class="play-info">
 			<h3> heres the info</h3>
 		</div>
     </section>
 
-	<section id="beginners" class="play-section" >
-		<div id="beginners-dropdown" class="play-dropdown session-color-1" >
+	<section id="beginner" class="play-section" >
+		<div id="beginner-dropdown" class="play-dropdown session-color-1" >
 			<p id="beginners-button" class="play-button">
 				&#9660
 			</p>
@@ -150,7 +150,7 @@
 				Beginners Training
 			</h2>
 		</div>
-		<div id="beginners-info" class="session-info-section">
+		<div id="beginners-info" class="play-info">
 			<h3> heres the info</h3>
 		</div>
     </section>
@@ -164,13 +164,13 @@
 				Social Competition
 			</h2>
 		</div>
-		<div id="social-info" class="session-info-section">
+		<div id="social-info" class="play-info">
 			<h3> heres the info</h3>
 		</div>
     </section>
 
-	<section id="scrimmage" class="play-section" >
-		<div id="scrimmage-dropdown" class="play-dropdown session-color-1" >
+	<section id="abc" class="play-section" >
+		<div id="abc-dropdown" class="play-dropdown session-color-1" >
 			<p id="scrimmage-button" class="play-button">
 				&#9660
 			</p>
@@ -178,7 +178,21 @@
 				Scrimmage Training
 			</h2>
 		</div>
-		<div id="scrimmage-info" class="session-info-section">
+		<div id="scrimmage-info" class="play-info">
+			<h3> heres the info</h3>
+		</div>
+    </section>
+
+	<section id="social" class="play-section" >
+		<div id="social-dropdown" class="play-dropdown session-color-2" >
+			<p id="social-button" class="play-button alt">
+				&#9660
+			</p>
+			<h2 style="color: #2c82c9; line-height: 2;">
+				Social Competition
+			</h2>
+		</div>
+		<div id="social-info" class="play-info">
 			<h3> heres the info</h3>
 		</div>
     </section>
@@ -198,7 +212,7 @@
 	<script src="js/wow.min.js"></script>
 	<script src="js/typewriter.js"></script>
 	<script src="js/jquery.onepagenav.js"></script>
-	<script src="js/merch.js"></script>
+	<script src="js/play.js"></script>
     <script src="js/timetable.js"></script>
 	<script src="https://apis.google.com/js/platform.js"></script>
 	<script src="https://iframely.net/embed.js"></script>
