--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 				<li><a href="contact.html">Contact-Us</a></li>
 				<li><a href="register.html">Register</a></li>
 				<li><a href="merch.html">Merch</a></li>
-				<li><a href="#" class="btn btn-blue">FAQ</a></li>
+				<li><a href="faq.html" class="btn btn-blue">FAQ</a></li>
 			</ul>
 		</div>
 		
 	</nav>
 
-	<header id="start">
+	<header id="start" class="main">
 		<div class="container">
 			<div class="table">
 				<div class="header-text">
