--- a/merch.html
+++ b/merch.html
@@ -58,7 +58,7 @@
             <li><a href="contact.html">Contact Us</a></li>
             <li><a href="register.html">Register</a></li>
             <li class="active"><a href="merch.html">Merch</a></li>
-            <li><a href="#" class="btn btn-blue">FAQ</a></li>
+            <li><a href="faq.html" class="btn btn-blue">FAQ</a></li>
         </ul>
 		</div>
 		
