--- a/register.html
+++ b/register.html
@@ -59,7 +59,7 @@
             <li><a href="contact.html">Contact Us</a></li>
             <li class="active"><a href="register.html">Register</a></li>
             <li><a href="merch.html">Merch</a></li>
-            <li><a href="#" class="btn btn-blue">FAQ</a></li>
+            <li><a href="faq.html" class="btn btn-blue">FAQ</a></li>
         </ul>
 		</div>
 		
@@ -83,7 +83,6 @@
 	<script src="js/typewriter.js"></script>
 	<script src="js/jquery.onepagenav.js"></script>
 	<script src="js/merch.js"></script>
-    <script src="js/timetable.js"></script>
 	<script src="https://apis.google.com/js/platform.js"></script>
 	<script src="https://iframely.net/embed.js"></script>
 </body>
